add new function map in js

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
               </div>
               <div class="cart">
                 <img src="./assets/svg/cart.svg " alt="cart.svg"loading="lazy" />
+                
+               <div class="popup-cart">
+                
+               </div>
               </div>
               <div class="menu">
                 <div class="menu-line"></div>
@@ -61,7 +65,6 @@
               <img src="./assets/svg/action2.svg" alt="" loading="lazy">
               </div>
           </div>
-          <div class="products-box"></div>
         </div>
       </section>
     </section>
@@ -103,37 +106,7 @@
                 <img src="./assets/svg/products.svg" alt="products.svg" loading="lazy">
               </button>
             </div>
-            <div class="products-box">
-              <div class="card1">
-                <img src="./assets/image/products1.png" alt="products1 png" loading="lazy">
-                <h2>Cosmetic products</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
-                <div class="card-actions1">
-                  <button>Buy Now</button>
-                </div>
-                  <div class="card-action1">
-                  <button>Add To Cart</button>
-                </div>
-                <div class="card-span1">
-                  <span>$120</span>
-                </div>
-              </div>
-              <div class="card2">
-                <img src="./assets/image/products2.png" alt="products2 png" loading="lazy">
-                <h2>Cosmetic products</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
-                <div class="card-actions2">
-                  <button>Buy Now</button>
-                </div>
-                  <div class="card-action2">
-                  <button>Add To Cart</button>
-                </div>
-                <div class="card-span2">
-                  <span>$120</span>
-                </div>
-              </div>
-              </div>
-            </div>
+            <div class="products-box"></div>
           </div>
       </section>
 
